FIX like icon missaligned when title wrap

--- a/src/scss/components/_photo-card.scss
+++ b/src/scss/components/_photo-card.scss
@@ -12,6 +12,7 @@
   &__description {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
   }
 
   &__name,
